# medical-record-uploader

./: Cargo.toml
assets/: TCT病例统计.xlsx  超声病例.xlsx
assets/一年级/放射/2021.10.1-11.30完成/: 陈.xlsx
assets/一年级/放射/2021.12.1-2022.1.31黄/: 放射科.xlsx
assets/一年级/放射/2021.7.1-8.31完成/: 赵、朱.xlsx
assets/一年级/病理诊断/: 病理诊断2356.xlsx
assets/二年级/: left.xlsx  一四.xlsx  免疫组化200.xlsx  细胞学2000.xlsx
assets/病例+账号/放射/2021.10.1-11.30完成/: 放射科.xlsx
assets/病例+账号/放射/2021.7.1-8.31完成/: 放射科.xlsx
assets/病例+账号/病理技术/轮转时间2021-7-1至2021-11-31/: 病理技术.xlsx  陈、黄、贾.xlsx
assets/病例+账号/病理技术/轮转时间2021.12.1-2022.2.28/: 病理技术.xlsx  赵、李、朱.xlsx
assets/病例+账号/病理诊断/: ~$病理诊断2356.xlsx  病理诊断14.xlsx  账号.xlsx
assets/病例+账号/超声/2021.11.1-11.30/: 赵、李、朱.xlsx
assets/病例+账号/超声/2021.12.1-12.31/: 超声病例.xlsx
assets/病例+账号/超声/2022-2-1至2022-2-29/: 超声病例.xlsx  黄、贾.xlsx
src/: main.rs
user_infos/: user0.txt  user2.txt  user3.txt  user4.txt
