[package]
name = "medical-record-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"calamine" = "0.18.0"
"reqwest" = {version = "*", features = ["blocking"]}
"tokio" = {version = "1.21.2", features = ["full"]}
"md5" = "0.7.0"
"base64" = "0.13.0"
chrono = "0.4.22"
serde_urlencoded = "*"